--- a/SERVER/CMakeLists.txt
+++ b/SERVER/CMakeLists.txt
@@ -3,4 +3,4 @@ project(PROGETTO)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(PROGETTO main.cpp CRDT.cpp CRDT.h Char.cpp Char.h)
+add_executable(PROGETTO main.cpp CRDT.cpp CRDT.h Char.cpp Char.h Identifier.cpp Identifier.h NetworkController.cpp NetworkController.h)
